--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "author": "AgustinSRG",
   "license": "MIT",
+  "private": true,
   "devDependencies": {
     "@node-minify/clean-css": "^6.2.0",
     "@node-minify/core": "^6.2.0",
